*******************************************************************************
 
 + = Additions since previous version
 ! = Bug fixes since previous version
 ~ = Changes   since previous version
 - = Features that has been removed

1.9.7 (2012-05-??)
 + Custom XML map source: New parameter {$q} for Quad-Tree encoded zoom, x & y

1.9.6 (2012-04-02)
 + New settings.xml option: <garminCustomMaxMapCount>
 + New atlas format: TomTom raster
 - Map source removed: Openstreetmap Osmarenderer (project has been retired)
 ! Paper atlas: Disabling compass in settings was ineffective 
 + New map source: OpenStreetMap 4uMaps.eu (Europe)
 + backgroundColor option for customMultiLayerMapSource
 ! Message "The JPEG image format is not supported by OpenJDK." was shown at
    start-up even is custom tiles processing was disabled
 + New atlas format: Viewranger
 ~ Magellan (RMP): Removed 18000 pixel check

1.9.5 (2012-03-09)
 ! Alpine Quest Map: Multiple bugs fixed (#3484328)
 ~ Improvements in atlas download progress dialog (patch by dvodvo)
 ~ Windows launcher "Mobile Atlas Creator.exe" increased max heap size to 1GB
 ~ Linux start.sh increased max heap size to 1GB
 + New selection mode: Circle (approximated by a 16 point polygon)
 + New map source: OSMapa-Topo with contours (PL)

1.9.4 (2012-01-29)
 + BeanShell map source: ignoreError=true feature added
 + Debug menu: Show/hide map tile borders

1.9.3 (2011-12-01)
 + Custom map source from local tiles XML schema changed: 
    new <sourceType> values: DIR_ZOOM_X_Y, DIR_ZOOM_Y_X, QUADKEY
    removed flipXYDirs (use <sourceType>DIR_ZOOM_Y_X</sourceType> instead
 ! Custom map source from ZIPs: Handling for atlas types with two file 
    extensions fixed
 ! Bugfix Osmdroid SQlite: PRIMARY KEY must be unique (#3438206)
 ~ Turaterkep map updated (renamed internally to Turaterkep256 because of map 
    format change)
 + Support added for starting external tools from within MOBAC 

1.9.2 (2011-10-12)